<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/home"
        android:orderInCategory="1"
        style="@style/CustomMenuIconStyle"
        app:showAsAction="always" />
    <item android:id="@+id/action_notification"
        android:title="@string/notification"
        android:icon="@drawable/notification"
        style="@style/CustomMenuIconStyle"
        android:orderInCategory="2"
        app:showAsAction="always" />
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings"
        style="@style/CustomMenuIconStyle"
        android:orderInCategory="3"
        app:showAsAction="always" />
    <item android:id="@+id/action_about"
        android:title="@string/about"
        style="@style/CustomMenuIconStyle"
        app:showAsAction="never" />
</menu>