<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context=".ListItemsActivity">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_btn"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box"
        android:layout_columnWeight="1"
        android:id="@+id/checkbox_btn"
        android:layout_gravity="fill"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_switch"
        android:layout_columnWeight="1"
        android:id="@+id/switch_btn"
        android:layout_gravity="fill"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:contentDescription="@string/text_camera"
        android:id="@+id/image_btn"
        android:src="@android:drawable/ic_menu_camera" />
</GridLayout>