<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="166dp"
        android:onClick="onButtonClick"
        android:text="@string/button_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="129dp"
        android:layout_height="53dp"
        android:layout_marginTop="87dp"
        android:onClick="onStartChat"
        android:text="@string/start_chat"
        android:id="@+id/start_chat"
        app:layout_constraintEnd_toEndOf="@+id/main_btn"
        app:layout_constraintTop_toTopOf="@+id/main_btn" />

    <Button
        android:id="@+id/testToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Test Toolbar"
        style="@style/CustomMenuIconStyle"
        android:onClick="onStartToolbar"
        app:layout_constraintEnd_toEndOf="@+id/start_chat"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="@+id/start_chat"
        app:layout_constraintTop_toBottomOf="@+id/start_chat" />

    <Button
        android:id="@+id/weatherForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/weather_forecast"
        app:layout_constraintEnd_toEndOf="@+id/text_hello"
        app:layout_constraintStart_toStartOf="@+id/text_hello"
        app:layout_constraintTop_toTopOf="@+id/text_hello"
        android:onClick="onWeatherForecast"/>

</androidx.constraintlayout.widget.ConstraintLayout>